# python-project-lvl3

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: python-ci.yaml
page_loader/: __init__.py  arg_parser.py  cli.py  download.py  engine.py  exceptions.py  resources.py
page_loader/scripts/: main.py
pageloader/scripts/: main.py
result/: books-toscrape-com-catalogue-a-light-in-the-attic_1000-index.html
tests/: conftest.py  test_download.py  test_engine.py  test_users.py
tests/fixtures/: local-page.html  remote-page.html
tests/fixtures/received/: test-page.html
